--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,14 +17,29 @@ body {
     display: flex;
     flex-direction: column; 
     align-items: center;
-    justify-content: flex-start;
     background-color: white;
     width: 425px;
     height: 375px;
     border: 1px solid white;
     border-radius: 25px;
-    padding: 35px 20px 20px 20px;
+    padding: 40px 20px 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.login {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.username,
+.senha {
+    font-size: 14px;
+    text-align: left;
+    width: 57px;
+    height: 16px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 282px;
 }
 
 #email,
@@ -37,28 +52,17 @@ body {
     border-radius: 15px;
 }
 
-#email {
-    margin-top: 7px;
-    margin-bottom: 32px;
-}
-
-.login {
-    margin-bottom: 15px;
-    text-align: center;
-    margin-top: 10px;
-}
-
-#password {
-    margin-top: 7px;
-}
-
-.username,
 .senha {
-    font-size: 14px;
-    text-align: left; /* Alinha o texto à esquerda */
-    margin-top: 5px; /* Adiciona um pequeno espaço acima dos elementos */
-    margin-left: 30px; /* Move os elementos para a esquerda */
+    margin-top: 25px;
 }
 
-
-
+.enter {
+    font-size: 20px;
+    color: rgb(238, 236, 236);
+    background-color: rebeccapurple;
+    margin-top: 30px;
+    height: 40px;
+    width: 350px;
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 25px;
+}
