styling fonts and changing the background gradient

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,14 @@ body {
     align-items: center;
     justify-content: center;
     background: rgb(234,162,250);
-    background: linear-gradient(90deg, rgba(234,162,250,1) 0%, rgba(187,77,183,1) 50%, rgba(234,162,250,1) 100%);
+    background: linear-gradient(90deg, #c987d4, #f19ec2);
 }
 
 .insert {
     display: flex;
     flex-direction: column; 
     align-items: center;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     width: 425px;
     height: 375px;
     border: 1px solid white;
@@ -29,11 +29,13 @@ body {
 .login {
     text-align: center;
     margin-bottom: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .username,
 .senha {
     font-size: 14px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: left;
     width: 57px;
     height: 16px;
@@ -58,6 +60,7 @@ body {
 
 .enter {
     font-size: 20px;
+    font-weight: bold;
     color: rgb(238, 236, 236);
     background-color: rebeccapurple;
     margin-top: 30px;
